--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Carpetas
+build/
+dist/
+nbproject/private/
+
+
 # Compiled class file
 *.class
 
@@ -11,7 +17,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
